# MarketPulse

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 198c6ee2994b_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/backtesting/: engine.py  service.py  signal_generator.py
backend/app/core/: cache.py  config.py  errors.py  logging.py  middleware.py  rate_limit.py  sanitize.py
backend/app/database/: base.py  session.py
backend/app/ml/: baselines.py  calibration.py  explain.py  features.py  pipeline.py  service.py  validation.py
backend/app/models/: __init__.py  backtest.py  cache.py  event.py  instrument.py  market_data.py  ml.py  news.py  provider_health.py  sentiment.py  watchlist.py
backend/app/nlp/: event_detection.py  sentiment.py
backend/app/providers/: base.py  demo_data.py  macro.py  market.py  news.py  social.py
backend/app/schemas/: assistant.py  (+12 more)
backend/scripts/: train_models.py
backend/tests/: conftest.py  test_backtesting.py  test_event_detection.py  test_feature_alignment.py  test_health_and_instruments.py  test_instrument_service.py  test_integration_ml_backtest_assistant.py  test_leaderboard_service.py  test_macro.py  test_market.py  test_ml_pipeline.py  test_news_and_sentiment_endpoints.py  test_provider_fallback.py  test_sentiment.py  test_watchlist.py  test_websocket.py
(+126 files in other folders)
